Refactor every functions
